[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/gui/PauseScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://src/gui/GUI.gd" type="Script" id=3]
[ext_resource path="res://src/gui/Joystick.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/gui/DowngradeScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/gui/Clock.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/progressbar-over.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/progressbar-under.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/progressbar-progress.png" type="Texture" id=9]
[ext_resource path="res://assets/Quantico-Bold.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 10 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Status" type="Control" parent="."]
margin_right = 360.0
margin_bottom = 90.0

[node name="Panel" type="Panel" parent="Status"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 30.0

[node name="Bars" type="VBoxContainer" parent="Status"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -32.0
margin_right = 167.0
margin_bottom = 32.0

[node name="HPDisplay" type="HBoxContainer" parent="Status/Bars"]
margin_right = 334.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="Status/Bars/HPDisplay"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "HP:"
align = 2
valign = 1

[node name="HPBar" type="TextureProgress" parent="Status/Bars/HPDisplay"]
margin_left = 34.0
margin_right = 334.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
value = 50.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 9 )
tint_progress = Color( 0.858824, 0.254902, 0.380392, 1 )
nine_patch_stretch = true

[node name="ENDisplay" type="HBoxContainer" parent="Status/Bars"]
margin_top = 34.0
margin_right = 334.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="Status/Bars/ENDisplay"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
text = "EN:"
align = 2
valign = 1

[node name="ENBar" type="TextureProgress" parent="Status/Bars/ENDisplay"]
margin_left = 34.0
margin_right = 334.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
value = 50.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 9 )
tint_progress = Color( 0.443137, 0.878431, 0.254902, 1 )
nine_patch_stretch = true

[node name="Status" type="HBoxContainer" parent="Status/Bars"]
margin_top = 68.0
margin_right = 334.0
margin_bottom = 98.0

[node name="Level" type="Label" parent="Status/Bars/Status"]
margin_right = 210.0
margin_bottom = 30.0
rect_min_size = Vector2( 210, 30 )
text = "Degradation Level: 1"
valign = 1

[node name="Clock" parent="Status/Bars/Status" instance=ExtResource( 6 )]

[node name="TextureRect" type="TextureRect" parent="Status"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Controls" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -90.0
margin_right = 180.0

[node name="Panel" type="Panel" parent="Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -10.0

[node name="Message" type="Label" parent="Controls"]
margin_left = 13.0
margin_right = 140.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Captain, I can't stop the energy drain..."
autowrap = true

[node name="Pause" type="Button" parent="Controls"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -25.0
margin_right = -30.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 50 )
text = "PAUSE"

[node name="Joystick" parent="Controls" instance=ExtResource( 4 )]
position = Vector2( 180, 40 )

[node name="DowngradeScreen" parent="." instance=ExtResource( 5 )]
visible = false

[node name="PauseScreen" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="pressed" from="Controls/Pause" to="." method="_on_Pause_pressed"]
